--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@
 # Git 用户配置（请修改为你自己的信息）
 git:
   # 你的 GitHub 用户名
-  user_name: "QUAN-1"
+  user_name: "jili1686y"
   
   # 你的 GitHub 邮箱（必须是账号绑定的邮箱，否则提交不计入贡献图）
-  user_email: "2395816280@qq.com"
+  user_email: "jili1686y@gmail.com"
